--- a/map_projection.ipynb
+++ b/map_projection.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "# 1 Introduction\n",
-    "This notebook is for the workshop presented at the AWOC/KJWOC 2024.  \n",
+    "This notebook is for the workshop presented at the PORSEC 2025.  \n",
     "This training course covers the basic handling of SGLI products using python in the following sequence.\n",
     "\n",
     "**1. reading data from hdf5 files and converting to geophysical quantities**  \n",
